--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,12 @@
 {
 	"compilerOptions": {
-		"target": "es5",
+		"target": "es6",
 		"module": "commonjs",
 		"declaration": true,
 		"outDir": "./dist",
 		"strict": true
-	}
+	},
+	"exclude": [
+		"node_modules"
+	]
 }
