--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,12 @@
 		"module": "commonjs",
 		"declaration": true,
 		"outDir": "./dist",
-		"strict": true
+		"strict": true,
+		"moduleResolution": "node"
 	},
 	"exclude": [
-		"node_modules"
+		"node_modules",
+		"dist",
+		"test"
 	]
 }
