--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
 		"lint": "tslint lib/**/*.ts --format stylish",
 		"test": "nyc mocha"
 	},
+	"bin": {
+		"vpt2glb": "./dist/bin/vpt2glb.js"
+	},
 	"keywords": [
 		"visual pinball",
 		"vp10",
@@ -53,6 +56,7 @@
 		],
 		"exclude": [
 			"res/**",
+			"bin/**",
 			"test/**",
 			"lib/gltf/gltf-exporter.ts"
 		],
