--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vpx-toolbox",
-	"version": "1.1.1-SNAPSHOT",
+	"version": "1.1.2",
 	"description": "A set of utils to deal with Visual Pinball files.",
 	"main": "dist/lib/index.js",
 	"types": "dist/lib/index.d.ts",
