--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
 	"author": "freezy <freezy@vpdb.io>",
 	"license": "GPL-2.0",
 	"dependencies": {
-		"es6-promise-pool": "2.5.0",
+		"es6-promise-pool": "^2.5.0",
 		"gltf-pipeline": "github:freezy/gltf-pipeline#hotfix/dedupe",
-		"gm": "1.23.1",
-		"pngquant": "2.0.1",
-		"sharp": "0.22.1",
-		"three": "0.104.0"
+		"gm": "^1.23.1",
+		"pngquant": "^2.0.1",
+		"sharp": "^0.22.1",
+		"three": "^0.104.0"
 	},
 	"devDependencies": {
 		"@types/chai": "4.1.7",
