--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@types/sharp": "0.22.1",
 		"chai": "4.2.0",
 		"esm": "3.2.22",
+		"looks-same": "7.2.0",
 		"mocha": "6.1.4",
 		"nyc": "14.1.0",
 		"rimraf": "2.6.3",
