--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
 	},
 	"devDependencies": {
 		"@types/chai": "4.1.7",
-		"@types/gm": "1.18.2",
+		"@types/gm": "^1.18.3",
 		"@types/mocha": "5.2.6",
-		"@types/node": "11.13.10",
-		"@types/sharp": "0.22.1",
+		"@types/node": "^12.0.2",
+		"@types/sharp": "^0.22.2",
 		"chai": "4.2.0",
-		"esm": "3.2.22",
-		"looks-same": "7.2.0",
+		"esm": "^3.2.24",
+		"looks-same": "^7.2.1",
 		"mocha": "6.1.4",
 		"nyc": "14.1.1",
 		"rimraf": "2.6.3",
