--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ after_success:
 before_deploy:
 - npm run build
 deploy:
+  skip_cleanup: true
   provider: npm
   email: freezy@vpdb.io
   api_key:
