--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vpx-toolbox",
-	"version": "1.1.7",
+	"version": "1.2.0",
 	"description": "A set of utils to deal with Visual Pinball files.",
 	"main": "dist/lib/index.js",
 	"types": "dist/lib/index.d.ts",
@@ -21,6 +21,7 @@
 		"dist"
 	],
 	"keywords": [
+		"pinball",
 		"visual pinball",
 		"vp10",
 		"vpx",
