--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	"author": "freezy <freezy@vpdb.io>",
 	"license": "GPL-2.0",
 	"dependencies": {
+		"buffer": "^5.2.1",
 		"es6-promise-pool": "^2.5.0",
 		"gltf-pipeline": "github:freezy/gltf-pipeline#hotfix/dedupe",
 		"gm": "^1.23.1",
