--- a/package.json
+++ b/package.json
@@ -48,12 +48,16 @@
 		"@types/mocha": "5.2.7",
 		"@types/node": "12.0.10",
 		"@types/sharp": "0.22.2",
+		"@types/sinon": "7.0.13",
+		"@types/sinon-chai": "^3.2.2",
 		"chai": "4.2.0",
 		"esm": "3.2.25",
 		"looks-same": "7.2.1",
 		"mocha": "6.1.4",
 		"nyc": "14.1.1",
 		"rimraf": "2.6.3",
+		"sinon": "7.3.2",
+		"sinon-chai": "^3.3.0",
 		"ts-node": "8.3.0",
 		"tslint": "5.18.0",
 		"typescript": "3.4.5"
