--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 	"devDependencies": {
 		"@types/chai": "4.1.7",
 		"@types/gm": "1.18.3",
+		"@types/microtime": "^2.1.0",
 		"@types/mocha": "5.2.7",
 		"@types/node": "12.6.1",
 		"@types/sharp": "0.22.2",
@@ -53,6 +54,7 @@
 		"chai": "4.2.0",
 		"esm": "3.2.25",
 		"looks-same": "7.2.1",
+		"microtime": "^3.0.0",
 		"mocha": "6.1.4",
 		"nyc": "14.1.1",
 		"rimraf": "2.6.3",
