--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"scripts": {
 		"build": "rimraf dist && tsc && cp -r res/maps dist/res",
 		"build:watch": "tsc --watch",
+		"compile": "nearleyc lib/scripting/vbscript.ne -o lib/scripting/vbscript.js && tsc lib/scripting/estree",
 		"lint": "tslint lib/**/*.ts --format stylish",
 		"test": "nyc mocha"
 	},
@@ -35,19 +36,24 @@
 	"author": "freezy <freezy@vpdb.io>",
 	"license": "GPL-2.0",
 	"dependencies": {
+		"astring": "^1.4.1",
 		"buffer": "5.4.0",
 		"es6-promise-pool": "^2.5.0",
 		"gltf-pipeline": "github:freezy/gltf-pipeline#hotfix/dedupe",
 		"gm": "^1.23.1",
+		"nearley": "^2.18.0",
 		"pngquant": "^3.0.0",
 		"sharp": "^0.23.0",
 		"three": "^0.107.0"
 	},
 	"devDependencies": {
+		"@types/astring": "^1.3.0",
 		"@types/chai": "4.2.0",
+		"@types/estree": "0.0.39",
 		"@types/gm": "1.18.4",
 		"@types/microtime": "2.1.0",
 		"@types/mocha": "5.2.7",
+		"@types/nearley": "2.11.0",
 		"@types/node": "12.7.2",
 		"@types/sharp": "0.22.2",
 		"@types/sinon": "7.0.13",
