chore(deps): Update all to latest.

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 	"author": "freezy <freezy@vpdb.io>",
 	"license": "GPL-2.0",
 	"dependencies": {
-		"buffer": "^5.2.1",
+		"buffer": "5.4.0",
 		"es6-promise-pool": "^2.5.0",
 		"gltf-pipeline": "github:freezy/gltf-pipeline#hotfix/dedupe",
 		"gm": "^1.23.1",
@@ -45,10 +45,10 @@
 	},
 	"devDependencies": {
 		"@types/chai": "4.2.0",
-		"@types/gm": "1.18.3",
+		"@types/gm": "1.18.4",
 		"@types/microtime": "2.1.0",
 		"@types/mocha": "5.2.7",
-		"@types/node": "12.7.1",
+		"@types/node": "12.7.2",
 		"@types/sharp": "0.22.2",
 		"@types/sinon": "7.0.13",
 		"@types/sinon-chai": "3.2.3",
@@ -58,7 +58,7 @@
 		"microtime": "3.0.0",
 		"mocha": "6.2.0",
 		"nyc": "14.1.1",
-		"rimraf": "2.6.3",
+		"rimraf": "3.0.0",
 		"sinon": "7.4.1",
 		"sinon-chai": "3.3.0",
 		"ts-node": "8.3.0",
