--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	"scripts": {
 		"build": "rimraf dist && tsc && cp -r res/maps dist/res",
 		"build:watch": "tsc --watch",
-		"compile": "nearleyc lib/scripting/vbscript.ne -o lib/scripting/vbscript.js && tsc lib/scripting/estree",
+		"compile": "nearleyc lib/scripting/vbscript.ne -o lib/scripting/vbscript.ts",
 		"lint": "tslint lib/**/*.ts --format stylish",
 		"test": "nyc mocha"
 	},
