--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
 	"author": "freezy <freezy@vpdb.io>",
 	"license": "GPL-2.0",
 	"dependencies": {
-		"astring": "^1.4.1",
+		"@types/escodegen": "0.0.6",
 		"buffer": "5.4.0",
 		"es6-promise-pool": "^2.5.0",
+		"escodegen": "^1.12.0",
 		"gltf-pipeline": "github:freezy/gltf-pipeline#hotfix/dedupe",
 		"gm": "^1.23.1",
 		"nearley": "^2.18.0",
@@ -47,7 +48,6 @@
 		"three": "^0.107.0"
 	},
 	"devDependencies": {
-		"@types/astring": "^1.3.0",
 		"@types/chai": "4.2.0",
 		"@types/estree": "0.0.39",
 		"@types/gm": "1.18.4",
