--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
 	"author": "freezy <freezy@vpdb.io>",
 	"license": "GPL-2.0",
 	"dependencies": {
-		"buffer": "5.4.0",
+		"astring": "^1.4.1",
+		"buffer": "^5.4.2",
 		"es6-promise-pool": "^2.5.0",
 		"escodegen": "^1.12.0",
 		"gltf-pipeline": "github:freezy/gltf-pipeline#hotfix/dedupe",
@@ -44,7 +45,7 @@
 		"nearley": "^2.18.0",
 		"pngquant": "^3.0.0",
 		"sharp": "^0.23.0",
-		"three": "^0.107.0"
+		"three": "^0.108.0"
 	},
 	"devDependencies": {
 		"@types/chai": "4.2.0",
@@ -68,8 +69,8 @@
 		"sinon": "7.4.1",
 		"sinon-chai": "3.3.0",
 		"ts-node": "8.3.0",
-		"tslint": "5.18.0",
-		"typescript": "3.5.3"
+		"tslint": "5.19.0",
+		"typescript": "3.6.2"
 	},
 	"bugs": {
 		"url": "https://github.com/vpdb/vpx-js/issues"
