--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
 	"author": "freezy <freezy@vpdb.io>",
 	"license": "GPL-2.0",
 	"dependencies": {
+		"@types/moo": "^0.5.0",
 		"buffer": "^5.4.2",
 		"es6-promise-pool": "^2.5.0",
 		"escodegen": "^1.12.0",
 		"estraverse": "^4.3.0",
 		"gltf-pipeline": "github:freezy/gltf-pipeline#hotfix/dedupe",
 		"gm": "^1.23.1",
+		"moo": "^0.5.0",
 		"nearley": "^2.18.0",
 		"pngquant": "^3.0.0",
 		"sharp": "^0.23.0",
