--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"test": "npm run compile && nyc mocha"
 	},
 	"bin": {
+		"vbs2js": "./dist/bin/vbs2js.js",
 		"vpt2glb": "./dist/bin/vpt2glb.js",
 		"vptscript": "./dist/bin/vptscript.js"
 	},
