--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
 		"url": "https://github.com/vpdb/vpx-js"
 	},
 	"scripts": {
-		"build": "npm run compile && rimraf dist && tsc && cp -r res/maps dist/res",
-		"build:watch": "npm run compile && npm run compile && tsc --watch",
+		"build": "npm run compile && rimraf dist && tsc && npm run build:cp",
+		"build:watch": "npm run compile && npm run build:cp && tsc --watch",
+		"build:cp": "cp -r res/maps dist/res",
 		"compile": "nearleyc lib/scripting/vbscript.ne -o lib/scripting/vbscript.ts",
 		"lint": "tslint lib/**/*.ts --format stylish",
 		"test": "npm run compile && nyc mocha"
