--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,10 @@
 	"compilerOptions": {
 		"target": "esnext",
 		"module": "commonjs",
-		"declaration": true,
-		"declarationMap": true,
 		"outDir": "./dist",
 		"strict": true,
-		"moduleResolution": "node"
+		"moduleResolution": "node",
+		"allowJs": true
 	},
 	"exclude": [
 		"node_modules",
