--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
 		"@types/microtime": "2.1.0",
 		"@types/mocha": "5.2.7",
 		"@types/moo": "0.5.0",
-		"@types/nearley": "2.11.0",
+		"@types/nearley": "^2.11.0",
 		"@types/node": "12.7.12",
 		"@types/sharp": "0.22.3",
 		"@types/sinon": "7.5.0",
@@ -69,7 +69,7 @@
 		"looks-same": "7.2.1",
 		"microtime": "3.0.0",
 		"mocha": "6.2.0",
-		"nearley": "2.18.0",
+		"nearley": "^2.19.0",
 		"nyc": "14.1.1",
 		"rimraf": "3.0.0",
 		"sinon": "7.5.0",
