--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"buffer": "^5.4.2",
 		"es6-promise-pool": "^2.5.0",
 		"escodegen": "^1.12.0",
+		"escope": "^3.6.0",
 		"estraverse": "^4.3.0",
 		"gltf-pipeline": "github:freezy/gltf-pipeline#hotfix/dedupe",
 		"gm": "^1.23.1",
