--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
 		"sharp": "^0.23.0",
 		"text-encoding": "^0.7.0",
 		"three": "^0.109.0",
-		"wpc-emu": "github:neophob/wpc-emu#feature/ts-interface"
+		"wpc-emu": "github:neophob/wpc-emu#develop"
 	},
 	"devDependencies": {
 		"@types/chai": "4.2.4",
