--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
 		"mocha": "6.2.2",
 		"nearley": "2.19.0",
 		"nyc": "14.1.1",
+		"prettier": "^1.18.2",
 		"rimraf": "3.0.0",
 		"sinon": "7.5.0",
 		"sinon-chai": "3.3.0",
