--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
 		"pngquant": "^3.0.0",
 		"sharp": "^0.23.0",
 		"text-encoding": "^0.7.0",
-		"three": "^0.109.0"
+		"three": "^0.109.0",
+		"wpc-emu": "github:neophob/wpc-emu#e0103dc602cb109dd4b9172b9de5ddb418e8e07a"
 	},
 	"devDependencies": {
 		"@types/chai": "4.2.4",
