Feature/wpc implementation (#139)
* first version of wpc-implementation

* tsfix

* - add missing package update
- update rom fetcher

* hardwire emulator to vpx-js

* - add non implemented ChangedLamps tests
- add debug info when ChangedLamps and Lamp call is made

* implement IEmulator

* add more todos

* introduce emu state object

* tslint fix

* delegate changed lamps to wpc-state

* implement emulator state

* get rid of .only

* drop debug

* emulator-state: normalize emu state

* change notifications should work

* bump wpc-emu version, updated ts types and option to exclude expensive state objects

* bump wpc-emu to fix ts definitions, exclude expensive state objects

* fix off by one issue

* emu: Add DMD feature to interface.

* emu: Add dmd stubs.

* return the dmd screen

* some cleanups and new hacks, parsing vbs should not fail anymore

* player: Give access to DMD.

* blink blink

* fix invalid delta timings

* fix tests, fix tslint error

* improve bootup time

* lights: Adapt bulb intensity.

* add switch handler

* add implementation hints, unskip test

* lights: Fix tests.

* fix get light call, add missing features to code

* more debug

* cache emu actions while the emu is initializing

* fix typo

* add more proxies

* expose switch change functions

* lights: Tweak insert lights.

* bump wpc-emu

* emu: Add input methods to player.

* support set swich, clear switch and toggle switch, refactor cache service

* work on vpm controller tests

* add cabinet input to cache, implify wpc-emu

* remove unused code

* make tslint happy

* define WPC Numbering, add missing cache type

* debug

* minor cleanup, again

* moar testing

* more testing

* imrpove testing

* returns only changed lamps, fixes #136

* fix tests

* consistency

* improve emu init, closes #135

* implement vpdb fetcher

* test rom fetcher

* go away stupid

* re

--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
 		"pngquant": "^3.0.0",
 		"sharp": "^0.23.0",
 		"text-encoding": "^0.7.0",
-		"three": "^0.109.0"
+		"three": "^0.109.0",
+		"wpc-emu": "github:neophob/wpc-emu#43d2ebceec5a9d19941fd06af0288c46789c54c6"
 	},
 	"devDependencies": {
 		"@types/chai": "4.2.4",
@@ -71,6 +72,8 @@
 		"microtime": "3.0.0",
 		"mocha": "6.2.2",
 		"nearley": "2.19.0",
+		"nock": "^11.7.0",
+		"node-fetch": "^2.6.0",
 		"nyc": "14.1.1",
 		"rimraf": "3.0.0",
 		"sinon": "7.5.0",
