--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
 		"sharp": "^0.23.0",
 		"text-encoding": "^0.7.0",
 		"three": "^0.110.0",
-		"wpc-emu": "github:neophob/wpc-emu#379e21aae00e6c006716bfeef73ed861093d91b2"
+		"wpc-emu": "0.34.2"
 	},
 	"devDependencies": {
 		"@types/chai": "4.2.4",
