--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
 	"author": "freezy <freezy@vpdb.io>",
 	"license": "GPL-2.0",
 	"dependencies": {
-		"buffer": "^5.4.2",
+		"buffer": "5.4.3",
 		"es6-promise-pool": "^2.5.0",
 		"escodegen": "^1.12.0",
 		"escope": "^3.6.0",
@@ -47,22 +47,22 @@
 		"gm": "^1.23.1",
 		"moo": "^0.5.1",
 		"pngquant": "^3.0.0",
-		"sharp": "^0.23.0",
+		"sharp": "0.23.2",
 		"text-encoding": "^0.7.0",
 		"three": "^0.110.0",
-		"wpc-emu": "0.34.2"
+		"wpc-emu": "^0.34.2"
 	},
 	"devDependencies": {
 		"@types/chai": "4.2.4",
 		"@types/escodegen": "0.0.6",
 		"@types/estraverse": "0.0.6",
 		"@types/estree": "0.0.39",
-		"@types/gm": "1.18.5",
+		"@types/gm": "1.18.6",
 		"@types/microtime": "2.1.0",
 		"@types/mocha": "5.2.7",
 		"@types/moo": "0.5.0",
 		"@types/nearley": "2.11.0",
-		"@types/node": "12.12.5",
+		"@types/node": "12.12.7",
 		"@types/sharp": "0.23.0",
 		"@types/sinon": "7.5.0",
 		"@types/sinon-chai": "3.2.3",
@@ -79,7 +79,7 @@
 		"sinon": "7.5.0",
 		"sinon-chai": "3.3.0",
 		"ts-node": "8.4.1",
-		"tslint": "5.20.0",
+		"tslint": "5.20.1",
 		"typescript": "3.6.4"
 	},
 	"bugs": {
