--- a/package.json
+++ b/package.json
@@ -2,31 +2,35 @@
 	"name": "vpx-js",
 	"version": "1.2.0",
 	"description": "Visual Pinball for Node.js and the Browser",
-	"main": "dist/lib/index.js",
-	"types": "dist/lib/index.d.ts",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/vpdb/vpx-js"
 	},
+	"main": "dist/umd/lib/index.js",
+	"module": "dist/esm/lib/index.js",
+	"types": "dist/esm/lib/index.d.ts",
+	"bin": {
+		"vbs2js": "./dist/umd/bin/vbs2js.js",
+		"vpt2glb": "./dist/umd/bin/vpt2glb.js",
+		"vptscript": "./dist/umd/bin/vptscript.js"
+	},
+	"browser": {
+		"./dist/esm/lib/refs.node.js": "./dist/esm/lib/refs.browser.js"
+	},
 	"scripts": {
-		"build": "npm run compile && rimraf dist && tsc && npm run build:cp",
-		"build:watch": "npm run compile && npm run build:cp && tsc --watch",
-		"build:cp": "cp -r res dist",
+		"build": "rimraf dist && npm run compile && npm run build:esm && npm run build:umd && npm run build:declarations && npm run build:cp",
+		"build:esm": "tsc --module es2015 --outDir ./dist/esm",
+		"build:umd": "tsc --module commonjs --outDir ./dist/umd",
+		"build:declarations": "tsc --module es2015 --outDir ./dist/esm --declaration true --allowJs false",
+		"build:watch": "npm run compile && npm run build:cp && tsc --watch --module es2015 --outDir ./dist/esm",
+		"build:cp": "cp -r res dist/esm && cp -r res dist/umd",
 		"compile": "nearleyc lib/scripting/vbscript.ne -o lib/scripting/vbscript.ts",
 		"lint": "tslint --format stylish --project ./tsconfig.json --config ./lib/tslint.json",
 		"test": "npm run compile && nyc mocha"
 	},
-	"bin": {
-		"vbs2js": "./dist/bin/vbs2js.js",
-		"vpt2glb": "./dist/bin/vpt2glb.js",
-		"vptscript": "./dist/bin/vptscript.js"
-	},
 	"files": [
 		"dist"
 	],
-	"browser": {
-		"./dist/lib/refs.node.js": "./dist/lib/refs.browser.js"
-	},
 	"keywords": [
 		"pinball",
 		"visual pinball",
