--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vpx-js",
-	"version": "1.2.3",
+	"version": "1.2.4",
 	"description": "Visual Pinball for Node.js and the Browser",
 	"author": "freezy <freezy@vpdb.io>",
 	"contributors": [
@@ -16,8 +16,12 @@
 	"module": "dist/esm/lib/index.js",
 	"types": "dist/esm/lib/index.d.ts",
 	"files": [
-		"dist/esm/**",
-		"dist/umd/**"
+		"dist/esm/bin/**",
+		"dist/esm/lib/**",
+		"dist/esm/res/**",
+		"dist/umd/bin/**",
+		"dist/umd/lib/**",
+		"dist/umd/res/**"
 	],
 	"bin": {
 		"vbs2js": "./dist/umd/bin/vbs2js.js",
@@ -47,6 +51,7 @@
 		"gltf-pipeline": "github:freezy/gltf-pipeline#hotfix/dedupe",
 		"gm": "^1.23.1",
 		"moo": "^0.5.1",
+		"nearley": "^2.19.0",
 		"pngquant": "^3.0.0",
 		"sharp": "0.23.2",
 		"text-encoding": "^0.7.0",
