--- a/package.json
+++ b/package.json
@@ -38,10 +38,9 @@
 		"build:declarations": "tsc --module es2015 --outDir ./dist/esm --declaration true --allowJs false",
 		"build:watch": "npm run compile && npm run build:cp && tsc --watch --module es2015 --outDir ./dist/esm",
 		"build:cp": "cp -r res dist/esm && cp -r res dist/cjs",
-		"ci": "npm run compile && npx mocha",
 		"compile": "nearleyc lib/scripting/vbscript.ne -o lib/scripting/vbscript.ts",
 		"lint": "tslint --format stylish --project ./tsconfig.json --config ./lib/tslint.json",
-		"test": "npm run compile && nyc mocha"
+		"test": "npm run compile && nyc npx mocha"
 	},
 	"dependencies": {
 		"buffer": "5.4.3",
