--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,7 +20,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm ci
-        TS_NODE_TRANSPILE_ONLY=true time npm test
+        time npm test
         npm run lint || true
         npm run build
       env:
