run tsc before tests start to capture ts errors

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"build:cp": "cp -r res dist/esm && cp -r res dist/cjs",
 		"compile": "nearleyc lib/scripting/vbscript.ne -o lib/scripting/vbscript.ts",
 		"lint": "tslint --format stylish --project ./tsconfig.json --config ./lib/tslint.json",
-		"test": "npm run compile && cross-env TS_NODE_TRANSPILE_ONLY=true nyc mocha"
+		"test": "npm run compile && tsc && cross-env TS_NODE_TRANSPILE_ONLY=true nyc mocha"
 	},
 	"dependencies": {
 		"buffer": "5.4.3",
