--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -10,21 +10,23 @@ jobs:
     strategy:
       matrix:
         node-version: [8.x, 10.x, 12.x]
+    name: Node ${{ matrix.node }}
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node-version }}
+	- uses: actions/checkout@v1
+    - name: Setup node ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install, build, and test
-      run: npm ci
-
-      run: time npm test
-
-      run: npm run lint
-
-      run: npm run build
-
+    - run: npm ci
+      env:
+        CI: true
+    - run: time npm test
+      env:
+        CI: true
+    - run: npm run lint
+      env:
+        CI: true
+    - run: npm run build
       env:
         CI: true
