--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,7 +20,7 @@ jobs:
       - run: npm ci
         env:
           CI: true
-      - run: time npm test
+      - run: npm test
         env:
           CI: true
       - run: npm run lint
