--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
 		"sharp": "0.23.3",
 		"text-encoding": "^0.7.0",
 		"three": "^0.110.0",
-		"wpc-emu": "^0.34.4"
+		"wpc-emu": "0.34.5"
 	},
 	"devDependencies": {
 		"@types/chai": "4.2.5",
