--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"@types/estraverse": "0.0.6",
 		"@types/estree": "0.0.40",
 		"@types/gm": "1.18.6",
+		"@types/howler": "^2.1.2",
 		"@types/microtime": "2.1.0",
 		"@types/mocha": "5.2.7",
 		"@types/moo": "0.5.0",
