--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vpx-js",
-	"version": "1.3.0",
+	"version": "1.3.1-SNAPSHOT",
 	"description": "Visual Pinball for Node.js and the Browser",
 	"author": "freezy <freezy@vpdb.io>",
 	"contributors": [
