--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
 		"./dist/esm/lib/refs.node.js": "./dist/esm/lib/refs.browser.js"
 	},
 	"scripts": {
-		"build": "rimraf dist && npm run compile && npm run build:esm && npm run build:cjs && npm run build:declarations && npm run build:cp",
+		"build": "rimraf dist && npm run compile && npm run build:esm && npm run build:cjs && npm run build:declarations && npm run build:cp && npm run build:post",
 		"build:esm": "tsc --module es2015 --outDir ./dist/esm",
 		"build:cjs": "tsc --module commonjs --outDir ./dist/cjs",
 		"build:declarations": "tsc --module es2015 --outDir ./dist/esm --declaration true --allowJs false",
 		"build:watch": "npm run compile && npm run build:cp && tsc --watch --module es2015 --outDir ./dist/esm",
-		"build:cp": "cp -r res dist/esm && cp -r res dist/cjs && node build/addBuildInformation.js",
+		"build:cp": "cp -r res dist/esm && cp -r res dist/cjs",
+		"build:post": "node build/write-info.js",
 		"compile": "nearleyc lib/scripting/vbscript.ne -o lib/scripting/vbscript.ts",
 		"lint": "tslint --format stylish --project ./tsconfig.json --config ./lib/tslint.json",
 		"test": "npm run compile && tsc && cross-env TS_NODE_TRANSPILE_ONLY=true nyc mocha"
