--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"build:esm": "tsc --module es2015 --outDir ./dist/esm",
 		"build:cjs": "tsc --module commonjs --outDir ./dist/cjs",
 		"build:declarations": "tsc --module es2015 --outDir ./dist/esm --declaration true --allowJs false",
-		"build:watch": "npm run compile && npm run build:cp && tsc --watch --module es2015 --outDir ./dist/esm",
+		"build:watch": "npm run compile && npm run build:cp && tsc-watch --module es2015 --outDir ./dist/esm --onSuccess 'npm run build:post'",
 		"build:cp": "cp -r res dist/esm && cp -r res dist/cjs",
 		"build:post": "node build/write-info.js",
 		"compile": "nearleyc lib/scripting/vbscript.ne -o lib/scripting/vbscript.ts",
@@ -86,6 +86,7 @@
 		"sinon": "7.5.0",
 		"sinon-chai": "3.3.0",
 		"ts-node": "8.5.2",
+		"tsc-watch": "^4.0.0",
 		"tslint": "5.20.1",
 		"typescript": "3.7.2"
 	},
