--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
 		"build:esm": "tsc --module es2015 --outDir ./dist/esm",
 		"build:cjs": "tsc --module commonjs --outDir ./dist/cjs",
 		"build:declarations": "tsc --module es2015 --outDir ./dist/esm --declaration true --allowJs false",
-		"build:watch": "npm run compile && npm run build:cp && npm run build:post && tsc --watch --module es2015 --outDir ./dist/esm",
-		"build:cp": "cp -r res dist/esm && cp -r res dist/cjs",
+		"build:watch": "npm run build:cp && npm run build:post && tsc --watch --module es2015 --outDir ./dist/esm",
+		"build:cp": "cp -r res dist/esm && cp -r res dist/cjs && cp lib/scripting/grammar/grammar.bnf dist/cjs/lib/scripting/grammar  && cp lib/scripting/grammar/grammar.bnf dist/esm/lib/scripting/grammar",
 		"build:post": "node build/write-info.js",
 		"lint": "tslint --format stylish --project ./tsconfig.json --config ./lib/tslint.json",
 		"test": "tsc && cross-env TS_NODE_TRANSPILE_ONLY=true nyc mocha"
