--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 		"build:watch": "npm run build:pre && npm run build:cp && tsc --watch --module es2015 --outDir ./dist/esm",
 		"build:watch:cjs": "npm run build:pre && npm run build:cp && tsc --watch  --module commonjs --outDir ./dist/cjs",
 		"build:cp": "cp -r res dist/esm && cp -r res dist/cjs && cp lib/scripting/grammar/grammar.bnf dist/cjs/lib/scripting/grammar  && cp lib/scripting/grammar/grammar.bnf dist/esm/lib/scripting/grammar",
-		"build:pre": "rimraf dist && mkdirp dist/esm/lib/scripting/grammar && mkdirp dist/cjs/lib/scripting/grammar && node build/write-info.js && node build/compile-rules.js",
+		"build:pre": "mkdirp dist/esm/lib/scripting/grammar && mkdirp dist/cjs/lib/scripting/grammar && node build/write-info.js && node build/compile-rules.js",
 		"lint": "tslint --format stylish --project ./tsconfig.json --config ./lib/tslint.json",
 		"test": "node build/compile-rules.js && tsc && cross-env TS_NODE_TRANSPILE_ONLY=true nyc mocha"
 	},
