scripting: Fix tests, scopes, and add a test:watch script for fast iteration.

--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
 		"build:declarations": "tsc --module es2015 --outDir ./dist/esm --declaration true --allowJs false",
 		"build:watch": "npm run build:pre && npm run build:cp && tsc --watch --module es2015 --outDir ./dist/esm",
 		"build:watch:cjs": "npm run build:pre && npm run build:cp && tsc --watch  --module commonjs --outDir ./dist/cjs",
-		"build:cp": "cp -r res dist/esm && cp -r res dist/cjs && cp lib/scripting/grammar/grammar.bnf dist/cjs/lib/scripting/grammar  && cp lib/scripting/grammar/grammar.bnf dist/esm/lib/scripting/grammar",
-		"build:pre": "mkdirp dist/esm/lib/scripting/grammar && mkdirp dist/cjs/lib/scripting/grammar && node build/write-info.js && node build/compile-rules.js",
+		"build:cp": "cp -r res dist/esm && cp -r res dist/cjs && cp lib/scripting/grammar/grammar.bnf dist/cjs/lib/scripting/grammar && cp lib/scripting/grammar/grammar.bnf dist/esm/lib/scripting/grammar",
+		"build:pre": "rimraf dist && mkdirp dist/esm/lib/scripting/grammar && mkdirp dist/cjs/lib/scripting/grammar && node build/write-info.js && node build/compile-rules.js",
 		"lint": "tslint --format stylish --project ./tsconfig.json --config ./lib/tslint.json",
-		"test": "node build/compile-rules.js && tsc && cross-env TS_NODE_TRANSPILE_ONLY=true nyc mocha"
+		"test": "node build/compile-rules.js && tsc && cross-env TS_NODE_TRANSPILE_ONLY=true nyc mocha --config test/mocha.ts.json lib/**/*.spec.ts",
+		"test:watch": "npm run build:pre && npm run build:cp && tsc-watch --module commonjs --outDir ./dist/cjs --onFirstSuccess \"mocha --config test/mocha.js.json dist/cjs/lib/**/*.spec.js\"",
+		"test:watch:debug": "npm run build:pre && npm run build:cp && tsc-watch --module commonjs --sourceMap --outDir ./dist/cjs --onFirstSuccess \"mocha --config test/mocha.js.json --inspect dist/cjs/lib/**/*.spec.js\""
 	},
 	"dependencies": {
 		"buffer": "5.4.3",
@@ -88,6 +90,7 @@
 		"sinon": "8.0.1",
 		"sinon-chai": "3.3.0",
 		"ts-node": "8.5.4",
+		"tsc-watch": "4.0.0",
 		"tslint": "5.20.1",
 		"typescript": "3.7.4"
 	},
