Update test script to run all test cases

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
 		"build:cp": "cp -r res dist/esm && cp -r res dist/cjs && cp lib/scripting/grammar/grammar.bnf dist/cjs/lib/scripting/grammar && cp lib/scripting/grammar/grammar.bnf dist/esm/lib/scripting/grammar",
 		"build:pre": "rimraf dist && mkdirp dist/esm/lib/scripting/grammar && mkdirp dist/cjs/lib/scripting/grammar && node build/write-info.js && node build/compile-rules.js",
 		"lint": "tslint --format stylish --project ./tsconfig.json --config ./lib/tslint.json",
-		"test": "node build/compile-rules.js && tsc && cross-env TS_NODE_TRANSPILE_ONLY=true nyc mocha --config test/mocha.ts.json lib/**/*.spec.ts",
+		"test": "node build/compile-rules.js && tsc && cross-env TS_NODE_TRANSPILE_ONLY=true nyc mocha --config test/mocha.ts.json **/*.spec.ts",
 		"test:watch": "npm run build:pre && npm run build:cp && tsc-watch --module commonjs --outDir ./dist/cjs --onFirstSuccess \"mocha --config test/mocha.js.json dist/cjs/lib/**/*.spec.js\"",
 		"test:watch:debug": "npm run build:pre && npm run build:cp && tsc-watch --module commonjs --outDir ./dist/cjs --onFirstSuccess \"mocha --config test/mocha.js.json --inspect dist/cjs/lib/**/*.spec.js\""
 	},
