chore(deps): Update all but Typescript.

--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
 		"test:watch:debug": "npm run build:pre && npm run build:cp && tsc-watch --module commonjs --outDir ./dist/cjs --onFirstSuccess \"mocha --config test/mocha.js.json --inspect dist/cjs/lib/**/*.spec.js\""
 	},
 	"dependencies": {
-		"buffer": "5.6.0",
+		"buffer": "^6.0.2",
 		"dash-ast": "^2.0.0",
-		"ebnf": "^1.7.4",
+		"ebnf": "^1.9.0",
 		"es6-promise-pool": "^2.5.0",
 		"escodegen": "^1.12.0",
 		"escope": "^3.6.0",
@@ -56,38 +56,38 @@
 		"gltf-pipeline": "github:freezy/gltf-pipeline#hotfix/dedupe",
 		"gm": "^1.23.1",
 		"moo": "^0.5.1",
-		"pngquant": "^3.0.0",
-		"sharp": "0.25.4",
+		"pngquant": "^3.1.0",
+		"sharp": "^0.26.2",
 		"text-encoding": "^0.7.0",
 		"three": "^0.112.1",
 		"wpc-emu": "0.34.5"
 	},
 	"devDependencies": {
-		"@types/chai": "4.2.11",
+		"@types/chai": "^4.2.14",
 		"@types/escodegen": "0.0.6",
 		"@types/estraverse": "0.0.6",
 		"@types/estree": "0.0.42",
-		"@types/gm": "1.18.8",
+		"@types/gm": "^1.18.9",
 		"@types/microtime": "2.1.0",
-		"@types/mocha": "7.0.2",
+		"@types/mocha": "^8.0.4",
 		"@types/moo": "0.5.3",
 		"@types/nearley": "2.11.1",
-		"@types/node": "12.12.47",
-		"@types/sharp": "0.25.0",
-		"@types/sinon": "9.0.4",
-		"@types/sinon-chai": "3.2.4",
+		"@types/node": "^14.14.7",
+		"@types/sharp": "^0.26.1",
+		"@types/sinon": "^9.0.8",
+		"@types/sinon-chai": "^3.2.5",
 		"chai": "4.2.0",
 		"cross-env": "7.0.2",
 		"esm": "3.2.25",
 		"looks-same": "7.2.3",
 		"microtime": "3.0.0",
 		"mkdirp": "1.0.4",
-		"mocha": "7.2.0",
-		"nock": "12.0.3",
-		"node-fetch": "2.6.0",
+		"mocha": "^8.2.1",
+		"nock": "^13.0.5",
+		"node-fetch": "^2.6.1",
 		"nyc": "15.1.0",
 		"rimraf": "3.0.2",
-		"sinon": "9.0.2",
+		"sinon": "^9.2.1",
 		"sinon-chai": "3.5.0",
 		"ts-node": "8.10.2",
 		"tsc-watch": "4.2.8",
